<resources>
    <string name="app_name">Drink\'N\'go</string>

    <!-- RegisterActivity/LoginActivity -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="driving_license_issue_date">Driving license issue date</string>
    <string name="weight">Weight</string>
    <string name="register">Register</string>
    <string name="already_register">Already have an account? Go to Login</string>
    <string name="login">Login</string>
    <string name="go_to_registration">Go to Registration</string>
    <string name="select_image">Select Image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select your gender:</string>
    <string name="alcohol_level_calculator_login">Go to alcohol level calculator without login</string>
    <string name="alcohol_level_calculator_register">Go to alcohol level calculator without register</string>

    <string name="field_not_empty">Field cannot be empty</string>
    <string name="error_email">Error! Invalid Email</string>
    <string name="error_password_too_short">Error! Password must have 8 characters</string>
    <string name="error_password_not_match">Error! Password don\'t match</string>
    <string name="error_registration">Error during registration</string>
    <string name="error_login">Error during login</string>
    <string name="error_email_exist">Error! Email exist</string>
    <string name="error_weight">Error! Weight must be > 0</string>
    <string name="error_check_fields">Error! Check the fields</string>
    <string name="error_email_password_incorrect">Error! Email or password incorrect</string>

    <string name="birthday_date_picker_title">Select birthday date</string>
    <string name="license_date_picker_title">Select driving license issue date</string>

    <!-- nav_menu -->
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_settings">Settings</string>

    <!-- menu_bottom_navigation -->
    <string name="bottom_navigation_alcohol_level">Alcohol level</string>
    <string name="bottom_navigation_passages">Passages</string>
    <string name="bottom_navigation_profile">My profile</string>

    <string name="volume">Volume (ml)</string>
    <string name="alcohol_content">Alcohol content (% vol.)</string>
    <string name="quantity">Quantity</string>
    <string name="hour_intake">Hour intake drink</string>
    <string name="add_drink">Add drink</string>
    <string name="time_taken_drink">Select the time you taken the drink</string>

    <!-- AlcoholLevelFragment -->
    <string name="plus_add_drink">+ Add drink</string>
    <string name="select_drink">Select drink</string>
    <string name="plus_add_custom_drink">+ Add custom drink</string>
    <string name="question_full_stomach">Are you on a full stomach?</string>
    <string name="question_new_driver">Are you a new driver?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_weight">Enter your weight</string>
    <string name="calculate">Calculate</string>
    <string name="error_enter_drink">Enter at least one drink</string>

    <!-- DrinkActivity -->
    <string name="volume_drink_added">Volume: </string>
    <string name="alcohol_content_drink_added">Alcohol content: </string>
    <string name="hour_taken">Hour taken: </string>
    <string name="error_quantity">The quantity cannot be zero</string>

    <string name="hour">Hour</string>

    <string name="custom_drink">Custom drink</string>

    <string name="search">Search</string>
    <string name="search_drink">Search a drink</string>

    <string name="loading">Loading...</string>

    <!-- ResultCalculationActivity -->
    <string name="your_alcohol_content">Your blood alcohol content is:</string>
    <string name="time_for_drive">Time to wait before you can drive:</string>
    <string name="passed">Passed</string>
    <string name="not_passed">Not Passed</string>
    <string name="hour_and">hour and</string>
    <string name="minute">minute</string>


    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="alcohol_level_calculation_category">Alcohol level calculation</string>
    <string name="limit_for_drive">Limit of blood alcohol content for drive</string>
    <string name="limit_for_new_driver">Limit of blood alcohol content for new driver</string>
    <string name="error_limit_pref">Value insert how limit is not valid</string>

    <!-- Profile -->
    <string name="save_data">Save data</string>
    <string name="error_update_profile">Error during update profile</string>
    <string name="ok_update_profile">Profile changed successfully</string>
    <string name="update_email">Update email</string>
    <string name="update_password">Update password</string>
    <string name="delete_account">Delete account</string>
    <string name="message_dialog_box_delete">Are you sure to delete this account?</string>
    <string name="error_during_delete_user">Error during delete user</string>
    <string name="fidelity_points_profile">Your fidelity points are</string>

    <!-- ModifyPasswordActivity -->
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="error_update_password">Error update password</string>
    <string name="error_old_password">Error! Old password is wrong</string>
    <string name="password_changed">Password changed</string>

    <!-- ModifyEmailActivity -->
    <string name="new_email">New email</string>
    <string name="change_email">Change email</string>
    <string name="error_update_email">Error update email</string>
    <string name="error_old_email">Error! Old email is wrong</string>
    <string name="email_changed">Email changed</string>
    <string name="error_password">Error! The password is wrong</string>

    <!-- PassagesChoiceFragment -->
    <string name="passage_request">Passage request</string>
    <string name="passage_provide">Passage Provide</string>
    <string name="recent_offers">Recent Offers</string>
    <string name="summary_required_passage">Summary required passage</string>
    <string name="already_offered">Your offer is still active!</string>

    <!-- RequestPassageActivity -->
    <string name="departure_information">Departure information</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="current_location">Use your current location</string>
    <string name="arrival_information">Arrival information</string>
    <string name="other_informations">Other informations</string>
    <string name="number_person">Number person</string>
    <string name="require_passage">Require passage</string>
    <string name="insert_ride_informations">Insert ride informations</string>
    <string name="error_departure_address">Error! Departure address is not valid</string>
    <string name="error_arrival_address">Error! Arrival address is not valid</string>
    <string name="error_number_person">Error! Passengers exceed limit</string>
    <string name="passage_created">The passage is created</string>
    <string name="error_time_passage">Error! Hour not valid</string>

    <!-- PassageProvideActivity -->
    <string name="departure_city">Departure city</string>
    <string name="arrival_city">Arrival city</string>
    <string name="error_search_passage">Error! Fill at least one field</string>
    <string name="no_result">No result</string>

    <!-- PassageSummaryActivity -->
    <string name="user_informations">User informations</string>
    <string name="age">Age</string>
    <string name="passage_informations">Passage Informations</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="go_to_departure">Go to departure</string>
    <string name="route_on_map">Route on map</string>
    <string name="offer_price">Offer a price</string>
    <string name="offer_passage">Offer passage</string>
    <string name="passage">Passage</string>
    <string name="error_location">Error to take your location</string>
    <string name="offer_created">Offer created</string>
    <string name="error_create_offer">Error during creation operation</string>
    <string name="withdraw_offer">Withdraw the offer</string>
    <string name="offer_blocked">You can not make an offer since you are requesting a passage</string>
    <string name="error_passage_removed">Error! the passage was removed</string>
    <string name="fidelity_points">Fidelity points</string>

    <!-- ReceivedOffersActivity -->
    <string name="received_offers">Received offers</string>
    <string name="price">Price</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="do_not_ask_again">Do not ask again</string>
    <string name="error_decline_offer">Error during decline offer</string>
    <string name="declined_offer">Offer declined</string>
    <string name="error_accept_offer">Error during accept offer</string>
    <string name="accepted_offer">Offer Accepted</string>

    <!-- MyPassageSummary -->
    <string name="my_passage_summary">My passage summary</string>
    <string name="request_new_passage">Request new passage</string>
    <string name="delete_passage">Delete passage</string>
    <string name="delete_passage_error">Error during delete operation</string>
    <string name="passage_canceled">Passage canceled</string>

    <!-- MadeOffersActivity -->
    <string name="made_offers">Made offers</string>
    <string name="state">State offer</string>
    <string name="last_price">Last price</string>
    <string name="there_are_not_offers">There are not offers</string>

    <!-- Notification -->
    <string name="offer_declined_notification">Your offer has been declined</string>
    <string name="offer_accepted_notification">Your offer has been accepted</string>
    <string name="offer_wait_notification">You have a new offer</string>
    <string name="offer_withdraw_notification">One of your offers has been withdrawn</string>

    <string name="passage_offer_exist">You have a passage or offer active</string>

    <string name="error_not_connected">Error! Not Connected</string>
</resources>