<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photoImaveViewReceivedOffer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_round_person_24"
        app:layout_constraintBottom_toBottomOf="@+id/fidelityPointsTextViewReceivedOffer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameTextViewReceivedOffer"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/nameTextViewReceivedOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/photoImaveViewReceivedOffer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genderTextViewReceivedOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="M"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/nameTextViewReceivedOffer"
        app:layout_constraintStart_toEndOf="@+id/nameTextViewReceivedOffer"
        app:layout_constraintTop_toTopOf="@+id/nameTextViewReceivedOffer" />

    <TextView
        android:id="@+id/ageTextViewReceivedOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/age"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/nameTextViewReceivedOffer"
        app:layout_constraintTop_toBottomOf="@+id/nameTextViewReceivedOffer" />

    <TextView
        android:id="@+id/PriceTextViewReceivedOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/ageTextViewReceivedOffer"
        app:layout_constraintTop_toBottomOf="@+id/ageTextViewReceivedOffer" />

    <LinearLayout
        android:id="@+id/buttonsLinearLayoutReceivedOffer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fidelityPointsTextViewReceivedOffer">

        <android.widget.Button
            android:id="@+id/acceptButtonReceivedOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_green"
            android:text="@string/accept" />

        <android.widget.Button
            android:id="@+id/declineButtonReceivedOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_red"
            android:text="@string/decline" />

    </LinearLayout>

    <TextView
        android:id="@+id/fidelityPointsTextViewReceivedOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fidelity_points"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/PriceTextViewReceivedOffer"
        app:layout_constraintTop_toBottomOf="@+id/PriceTextViewReceivedOffer" />

</androidx.constraintlayout.widget.ConstraintLayout>